--- a/ContainerManagementSystem/Views/Account/Register.cshtml
+++ b/ContainerManagementSystem/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RegisterViewModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Create new account";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -8,9 +8,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-            <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="UserName"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
@@ -25,6 +29,10 @@
                 <label asp-for="ConfirmPassword"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdentityRole" class="control-label"></label>
+                <select asp-for="IdentityRole" class="form-control" asp-items="ViewBag.IdentityRole"></select>
             </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
