--- a/ContainerManagementSystem/Views/Home/About.cshtml
+++ b/ContainerManagementSystem/Views/Home/About.cshtml
@@ -2,6 +2,13 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<img src="~/images/logo.svg" alt="Logo" class="logo" />
+
+<p>
+    Maersk Line is the global container division and the largest operating unit of the Maersk Group, 
+    a Danish business conglomerate. It is the world's largest container shipping company having 
+    customers through 374 offices in 116 countries. It employs approximately 7,000 sea farers and 
+    approximately 25,000 land-based people. Maersk Line operates over 600 vessels and has a capacity 
+    of 2.6 million TEU. The company was founded in 1928.
+</p>
