--- a/ContainerManagementSystem/Views/Vessels/Details.cshtml
+++ b/ContainerManagementSystem/Views/Vessels/Details.cshtml
@@ -24,6 +24,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @if (User.IsInRole("Administrator"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> <span>|</span>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
