added date time picker; added search for shipping schedule; added buildbundlerminifier

--- a/ContainerManagementSystem/Views/ShippingSchedules/Edit.cshtml
+++ b/ContainerManagementSystem/Views/ShippingSchedules/Edit.cshtml
@@ -14,12 +14,12 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="DepartureTime" class="control-label"></label>
-                <input asp-for="DepartureTime" class="form-control" />
+                <input asp-for="DepartureTime" class="form-control" data-datetimepicker="true" />
                 <span asp-validation-for="DepartureTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ArrivalTime" class="control-label"></label>
-                <input asp-for="ArrivalTime" class="form-control" />
+                <input asp-for="ArrivalTime" class="form-control" data-datetimepicker="true" />
                 <span asp-validation-for="ArrivalTime" class="text-danger"></span>
             </div>
             <div class="form-group">
