--- a/ContainerManagementSystem/Views/ShippingSchedules/Create.cshtml
+++ b/ContainerManagementSystem/Views/ShippingSchedules/Create.cshtml
@@ -13,12 +13,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DepartureTime" class="control-label"></label>
-                <input asp-for="DepartureTime" class="form-control" />
+                <input asp-for="DepartureTime" class="form-control" data-datetimepicker="true" />
                 <span asp-validation-for="DepartureTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ArrivalTime" class="control-label"></label>
-                <input asp-for="ArrivalTime" class="form-control" />
+                <input asp-for="ArrivalTime" class="form-control" data-datetimepicker="true" />
                 <span asp-validation-for="ArrivalTime" class="text-danger"></span>
             </div>
             <div class="form-group">
