--- a/ContainerManagementSystem/Views/ShippingSchedules/Index.cshtml
+++ b/ContainerManagementSystem/Views/ShippingSchedules/Index.cshtml
@@ -6,24 +6,49 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<div class="panel panel-default">
+    <form asp-action="Index" method="get">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="DepartureLocation" class="control-label">Departure location</label>
+                        <input name="DepartureLocation" value="@ViewData["DepartureLocation"]" class="form-control" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="ArrivalLocation" class="control-label">Arrival location</label>
+                        <input name="ArrivalLocation" value="@ViewData["ArrivalLocation"]" class="form-control" />
+                    </div>
+                </div>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-default">Search</button>
+            </div>
+        </div>
+    </form>
+</div>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.DepartureTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ArrivalTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DepartureLocation)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ArrivalLocation)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DepartureTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ArrivalTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DepartureLocation)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ArrivalLocation)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Vessel)
             </th>
