fix bug where agent user id are not persisted when updating existing bookings/customers; use constants for roles

--- a/ContainerManagementSystem/Views/ShippingSchedules/Details.cshtml
+++ b/ContainerManagementSystem/Views/ShippingSchedules/Details.cshtml
@@ -42,7 +42,7 @@
     </dl>
 </div>
 <div>
-    @if (User.IsInRole("Administrator"))
+    @if (User.IsInRole(Roles.Administrator))
     {
         <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> <span>|</span>
     }
