--- a/ContainerManagementSystem/Views/Manage/_ManageNav.cshtml
+++ b/ContainerManagementSystem/Views/Manage/_ManageNav.cshtml
@@ -8,7 +8,7 @@
     <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
     <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Password</a></li>
 
-    @if (User.IsInRole("Administrator"))
+    @if (User.IsInRole(Roles.Administrator))
     {
         <li><a asp-controller="Account" asp-action="Register">Create account</a></li>
     }
