--- a/ContainerManagementSystem/Views/Vessels/Details.cshtml
+++ b/ContainerManagementSystem/Views/Vessels/Details.cshtml
@@ -24,7 +24,7 @@
     </dl>
 </div>
 <div>
-    @if (User.IsInRole("Administrator"))
+    @if (User.IsInRole(Roles.Administrator))
     {
         <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> <span>|</span>
     }
