--- a/ContainerManagementSystem/Views/Vessels/Index.cshtml
+++ b/ContainerManagementSystem/Views/Vessels/Index.cshtml
@@ -30,7 +30,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Capacity)
             </td>
-@if (User.IsInRole("Administrator"))
+@if (User.IsInRole(Roles.Administrator))
 {
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
