--- a/ContainerManagementSystem/Views/Vessels/Index.cshtml
+++ b/ContainerManagementSystem/Views/Vessels/Index.cshtml
@@ -6,9 +6,13 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole(Roles.Administrator))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
