--- a/ContainerManagementSystem/Views/Bookings/Create.cshtml
+++ b/ContainerManagementSystem/Views/Bookings/Create.cshtml
@@ -12,6 +12,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="CargoDescription" class="control-label"></label>
+                <input asp-for="CargoDescription" class="form-control" />
+                <span asp-validation-for="CargoDescription" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CargoWeightInKilograms" class="control-label"></label>
                 <input asp-for="CargoWeightInKilograms" class="form-control" />
                 <span asp-validation-for="CargoWeightInKilograms" class="text-danger"></span>
