--- a/ContainerManagementSystem/Views/Bookings/Delete.cshtml
+++ b/ContainerManagementSystem/Views/Bookings/Delete.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.CargoDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CargoDescription)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CargoWeightInKilograms)
         </dt>
         <dd>
