--- a/ContainerManagementSystem/Views/Bookings/Details.cshtml
+++ b/ContainerManagementSystem/Views/Bookings/Details.cshtml
@@ -10,6 +10,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.CargoDescription)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CargoDescription)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.CargoWeightInKilograms)
         </dt>
         <dd>
