--- a/ContainerManagementSystem/Views/Bookings/Index.cshtml
+++ b/ContainerManagementSystem/Views/Bookings/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.CargoDescription)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Customer)
             </th>
             <th>
@@ -30,6 +33,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CargoDescription)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Customer.Name)
             </td>
