remove booking editing; add booking confirmation message; fix minor errors

--- a/ContainerManagementSystem/Views/Bookings/Delete.cshtml
+++ b/ContainerManagementSystem/Views/Bookings/Delete.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.ShippingSchedule)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ShippingSchedule.ArrivalLocation)
+            @Html.DisplayFor(model => model.ShippingSchedule.Description)
         </dd>
     </dl>
     
